assertAll,多个executable,就是可以执行多个断言，还有，注意看@Bean的@Scope注解，是否是prototype的